--- a/genindex.html
+++ b/genindex.html
@@ -6,7 +6,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; larch 0.9.46 documentation</title>
+    <title>Index &#8212; xraylarch 0.9.46 documentation</title>
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
@@ -19,10 +19,13 @@
     
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
-  <script type="text/x-mathjax-config">
-     MathJax.Hub.Config({ "TeX": {Macros: {AA : "{\\unicode{x212B}}"}},
-			 "HTML-CSS": {scale: 90}});
-  </script>
+
+<script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
+
+<script type="text/x-mathjax-config">
+   MathJax.Hub.Config({ "TeX": {Macros: {AA : "{\\unicode{x212B}}"}}, "HTML-CSS": {scale: 90}});
+</script>
+
 
   </head><body>
 <div style=" color: #c5daba;  text-align: left; height:65px; padding: 0px">
@@ -132,6 +135,8 @@
       <li><a href="xafs/autobk.html#module-_xafs">_xafs (module)</a>, <a href="xafs/diffkk.html#module-_xafs">[1]</a>, <a href="xafs/feffit.html#module-_xafs">[2]</a>, <a href="xafs/feffpaths.html#module-_xafs">[3]</a>, <a href="xafs/index.html#module-_xafs">[4]</a>, <a href="xafs/utilities.html#module-_xafs">[5]</a>, <a href="xafs/wavelets.html#module-_xafs">[6]</a>, <a href="xafs/xafsft.html#module-_xafs">[7]</a>, <a href="xafs/xanes.html#module-_xafs">[8]</a>
 </li>
       <li><a href="xray/index.html#module-_xray">_xray (module)</a>
+</li>
+      <li><a href="xrf/index.html#module-_xrf">_xrf (module)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -443,7 +448,7 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="devel/frompython.html#module-larch">larch (module)</a>, <a href="devel/index.html#module-larch">[1]</a>
+      <li><a href="devel/frompython.html#module-larch">larch (module)</a>
 </li>
       <li><a href="tutorial/builtins.html#len">len() (built-in function)</a>
 </li>
@@ -607,7 +612,7 @@
 </li>
       <li><a href="data/index.html#_io.read_athena">read_athena() (in module _io)</a>
 </li>
-      <li><a href="xrf/index.html#read_gsemca">read_gsemca() (built-in function)</a>
+      <li><a href="xrf/mca.html#read_gsemca">read_gsemca() (built-in function)</a>
 </li>
       <li><a href="data/index.html#_io.read_gsescan">read_gsescan() (in module _io)</a>
 </li>
@@ -769,7 +774,7 @@
 </li>
       <li><a href="xray/index.html#_xray.xray_lines">xray_lines() (in module _xray)</a>
 </li>
-      <li><a href="xrf/index.html#xrf_plot">xrf_plot() (built-in function)</a>
+      <li><a href="xrf/mca.html#xrf_plot">xrf_plot() (built-in function)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -806,7 +811,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2019.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.1.2.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.3.1.
     </div>
   </body>
 </html>
