update doc for 0.9.47

--- a/genindex.html
+++ b/genindex.html
@@ -6,7 +6,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; xraylarch 0.9.46 documentation</title>
+    <title>Index &#8212; xraylarch 0.9.47 documentation</title>
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
@@ -120,7 +120,7 @@
 </li>
       <li><a href="data/index.html#module-_io">_io (module)</a>
 </li>
-      <li><a href="fitting/fitpeaks.html#module-_math">_math (module)</a>, <a href="fitting/index.html#module-_math">[1]</a>, <a href="fitting/minimize.html#module-_math">[2]</a>, <a href="fitting/parameters.html#module-_math">[3]</a>, <a href="xafs/xanes.html#module-_math">[4]</a>
+      <li><a href="fitting/fitpeaks.html#module-_math">_math (module)</a>
 </li>
       <li><a href="plotting/index.html#module-_plotter">_plotter (module)</a>
 </li>
@@ -131,8 +131,6 @@
       <li><a href="fitting/parameters.html#index-0">_sys.fiteval</a>
 </li>
       <li><a href="xafs/feffpaths.html#index-5">_sys.fiteval with Feff paths</a>
-</li>
-      <li><a href="xafs/autobk.html#module-_xafs">_xafs (module)</a>, <a href="xafs/diffkk.html#module-_xafs">[1]</a>, <a href="xafs/feffit.html#module-_xafs">[2]</a>, <a href="xafs/feffpaths.html#module-_xafs">[3]</a>, <a href="xafs/index.html#module-_xafs">[4]</a>, <a href="xafs/utilities.html#module-_xafs">[5]</a>, <a href="xafs/wavelets.html#module-_xafs">[6]</a>, <a href="xafs/xafsft.html#module-_xafs">[7]</a>, <a href="xafs/xanes.html#module-_xafs">[8]</a>
 </li>
       <li><a href="xray/index.html#module-_xray">_xray (module)</a>
 </li>
@@ -178,7 +176,7 @@
 </li>
       <li><a href="xray/index.html#_xray.atomic_symbol">atomic_symbol() (in module _xray)</a>
 </li>
-      <li><a href="xafs/autobk.html#_xafs.autobk">autobk() (in module _xafs)</a>
+      <li><a href="xafs/autobk.html#autobk">autobk() (built-in function)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -212,7 +210,7 @@
 </li>
       <li><a href="data/index.html#_io.caput">caput() (in module _io)</a>
 </li>
-      <li><a href="xafs/wavelets.html#_xafs.cauchy_wavelet">cauchy_wavelet() (in module _xafs)</a>
+      <li><a href="xafs/wavelets.html#cauchy_wavelet">cauchy_wavelet() (built-in function)</a>
 </li>
       <li><a href="tutorial/builtins.html#cd">cd() (built-in function)</a>, <a href="tutorial/builtins.html#cd">[1]</a>
 </li>
@@ -266,9 +264,9 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="xafs/diffkk.html#_xafs.diffkk">diffkk() (in module _xafs)</a>
+      <li><a href="xafs/diffkk.html#diffkk">diffkk() (built-in function)</a>
 </li>
-      <li><a href="xafs/diffkk.html#_xafs.diffkk.kk">diffkk.kk() (in module _xafs)</a>
+      <li><a href="xafs/diffkk.html#diffkk.kk">diffkk.kk() (built-in function)</a>
 </li>
       <li><a href="tutorial/builtins.html#dir">dir() (built-in function)</a>
 </li>
@@ -284,11 +282,11 @@
 </li>
       <li><a href="tutorial/builtins.html#enumerate">enumerate() (built-in function)</a>
 </li>
-      <li><a href="xafs/utilities.html#_xafs.estimate_noise">estimate_noise() (in module _xafs)</a>
+      <li><a href="xafs/utilities.html#estimate_noise">estimate_noise() (built-in function)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="xafs/utilities.html#_xafs.etok">etok() (in module _xafs)</a>
+      <li><a href="xafs/utilities.html#etok">etok() (built-in function)</a>
 </li>
       <li><a href="xafs/feffpaths.html#index-2">EXAFS Equation with Feff</a>
 </li>
@@ -314,9 +312,9 @@
 </li>
       <li><a href="xafs/feffpaths.html#index-0">Feff Path Parameters</a>
 </li>
-      <li><a href="xafs/feffpaths.html#_xafs.feff6l">feff6l() (in module _xafs)</a>
+      <li><a href="xafs/feffpaths.html#feff6l">feff6l() (built-in function)</a>
 </li>
-      <li><a href="xafs/feffpaths.html#_xafs.feff8l">feff8l() (in module _xafs)</a>
+      <li><a href="xafs/feffpaths.html#feff8l">feff8l() (built-in function)</a>
 </li>
       <li><a href="xafs/feffit.html#index-2">Feffit Output Arrays</a>
 </li>
@@ -324,29 +322,27 @@
 </li>
       <li><a href="xafs/feffit.html#index-0">Feffit Transform Group Members</a>
 </li>
-      <li><a href="xafs/feffit.html#_xafs.feffit">feffit() (in module _xafs)</a>
+      <li><a href="xafs/feffit.html#feffit">feffit() (built-in function)</a>
 </li>
-      <li><a href="xafs/feffit.html#_xafs.feffit_dataset">feffit_dataset() (in module _xafs)</a>
+      <li><a href="xafs/feffit.html#feffit_dataset">feffit_dataset() (built-in function)</a>
 </li>
-      <li><a href="xafs/feffit.html#_xafs.feffit_report">feffit_report() (in module _xafs)</a>
-</li>
-      <li><a href="xafs/feffit.html#_xafs.feffit_transform">feffit_transform() (in module _xafs)</a>
+      <li><a href="xafs/feffit.html#feffit_report">feffit_report() (built-in function)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="xafs/feffpaths.html#_xafs.feffpath">feffpath() (in module _xafs)</a>
+      <li><a href="xafs/feffit.html#feffit_transform">feffit_transform() (built-in function)</a>
 </li>
-      <li><a href="xafs/feffpaths.html#_xafs.feffrunner">feffrunner() (in module _xafs)</a>
+      <li><a href="xafs/feffpaths.html#feffpath">feffpath() (built-in function)</a>
 </li>
-      <li><a href="xafs/feffpaths.html#_xafs.feffrunner.run">feffrunner.run() (in module _xafs)</a>
+      <li><a href="xafs/feffpaths.html#feffrunner">feffrunner() (built-in function)</a>
 </li>
-      <li><a href="xafs/feffpaths.html#_xafs.ff2chi">ff2chi() (in module _xafs)</a>
+      <li><a href="xafs/feffpaths.html#feffrunner.run">feffrunner.run() (built-in function)</a>
+</li>
+      <li><a href="xafs/feffpaths.html#ff2chi">ff2chi() (built-in function)</a>
 </li>
       <li><a href="tutorial/builtins.html#filter">filter() (built-in function)</a>
 </li>
-      <li><a href="xafs/preedge.html#find_e0">find_e0() (built-in function)</a>
-</li>
-      <li><a href="xafs/utilities.html#index-0">First Argument Group convention</a>
+      <li><a href="xafs/preedge.html#larch.xafs.find_e0">find_e0() (in module larch.xafs)</a>
 </li>
       <li><a href="fitting/fitpeaks.html#_math.fit_peak">fit_peak() (in module _math)</a>
 </li>
@@ -364,7 +360,7 @@
 </li>
       <li><a href="tutorial/builtins.html#frozenset">frozenset() (built-in function)</a>
 </li>
-      <li><a href="xafs/xafsft.html#_xafs.ftwindow">ftwindow() (in module _xafs)</a>
+      <li><a href="xafs/xafsft.html#ftwindow">ftwindow() (built-in function)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -388,7 +384,7 @@
 </li>
       <li><a href="tutorial/builtins.html#group_items">group_items() (built-in function)</a>
 </li>
-      <li><a href="fitting/parameters.html#_math.guess">guess() (in module _math)</a>
+      <li><a href="fitting/parameters.html#guess">guess() (built-in function)</a>
 </li>
       <li><a href="guis.html#module-guis">guis (module)</a>
 </li>
@@ -440,7 +436,7 @@
 <h2 id="K">K</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="xafs/utilities.html#_xafs.ktoe">ktoe() (in module _xafs)</a>
+      <li><a href="xafs/utilities.html#ktoe">ktoe() (built-in function)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -452,9 +448,9 @@
 </li>
       <li><a href="tutorial/builtins.html#len">len() (built-in function)</a>
 </li>
-      <li><a href="xafs/xanes.html#_math.lincombo_fit">lincombo_fit() (in module _math)</a>
+      <li><a href="xafs/xanes.html#lincombo_fit">lincombo_fit() (built-in function)</a>
 </li>
-      <li><a href="xafs/xanes.html#_math.lincombo_fitall">lincombo_fitall() (in module _math)</a>
+      <li><a href="xafs/xanes.html#lincombo_fitall">lincombo_fitall() (built-in function)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -492,9 +488,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="xafs/preedge.html#mback">mback() (built-in function)</a>
 </li>
+      <li><a href="xafs/preedge.html#mback_norm">mback_norm() (built-in function)</a>
+</li>
       <li><a href="tutorial/builtins.html#min">min() (built-in function)</a>
 </li>
-      <li><a href="fitting/minimize.html#_math.minimize">minimize() (in module _math)</a>
+      <li><a href="fitting/minimize.html#minimize">minimize() (built-in function)</a>
 </li>
       <li><a href="tutorial/builtins.html#mkdir">mkdir() (built-in function)</a>
 </li>
@@ -542,19 +540,19 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="fitting/parameters.html#_math.param">param() (in module _math)</a>
+      <li><a href="fitting/parameters.html#param">param() (built-in function)</a>
 </li>
-      <li><a href="fitting/parameters.html#_math.param_group">param_group() (in module _math)</a>
+      <li><a href="fitting/parameters.html#param_group">param_group() (built-in function)</a>
 </li>
       <li><a href="tutorial/builtins.html#parent">parent() (built-in function)</a>
 </li>
-      <li><a href="xafs/feffpaths.html#_xafs.path2chi">path2chi() (in module _xafs)</a>
+      <li><a href="xafs/feffpaths.html#path2chi">path2chi() (built-in function)</a>
 </li>
       <li><a href="tutorial/builtins.html#pause">pause() (built-in function)</a>
 </li>
-      <li><a href="xafs/xanes.html#_math.pca_fit">pca_fit() (in module _math)</a>
+      <li><a href="xafs/xanes.html#pca_fit">pca_fit() (built-in function)</a>
 </li>
-      <li><a href="xafs/xanes.html#_math.pca_train">pca_train() (in module _math)</a>
+      <li><a href="xafs/xanes.html#pca_train">pca_train() (built-in function)</a>
 </li>
       <li><a href="fitting/lineshapes.html#pearson7">pearson7() (built-in function)</a>
 </li>
@@ -564,23 +562,23 @@
 </li>
       <li><a href="plotting/index.html#_plotter.plot_arrow">plot_arrow() (in module _plotter)</a>
 </li>
-      <li><a href="xafs/utilities.html#_xafs.plot_bkg">plot_bkg() (in module _xafs)</a>
+      <li><a href="xafs/utilities.html#plot_bkg">plot_bkg() (built-in function)</a>
 </li>
-      <li><a href="xafs/utilities.html#_xafs.plot_chifit">plot_chifit() (in module _xafs)</a>
+      <li><a href="xafs/utilities.html#plot_chifit">plot_chifit() (built-in function)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="xafs/utilities.html#_xafs.plot_chik">plot_chik() (in module _xafs)</a>
+      <li><a href="xafs/utilities.html#plot_chik">plot_chik() (built-in function)</a>
 </li>
-      <li><a href="xafs/utilities.html#_xafs.plot_chir">plot_chir() (in module _xafs)</a>
+      <li><a href="xafs/utilities.html#plot_chir">plot_chir() (built-in function)</a>
 </li>
       <li><a href="plotting/index.html#_plotter.plot_marker">plot_marker() (in module _plotter)</a>
 </li>
-      <li><a href="xafs/utilities.html#_xafs.plot_mu">plot_mu() (in module _xafs)</a>
+      <li><a href="xafs/utilities.html#plot_mu">plot_mu() (built-in function)</a>
 </li>
-      <li><a href="xafs/utilities.html#_xafs.plot_path_k">plot_path_k() (in module _xafs)</a>
+      <li><a href="xafs/utilities.html#plot_path_k">plot_path_k() (built-in function)</a>
 </li>
-      <li><a href="xafs/utilities.html#_xafs.plot_path_r">plot_path_r() (in module _xafs)</a>
+      <li><a href="xafs/utilities.html#plot_path_r">plot_path_r() (built-in function)</a>
 </li>
       <li><a href="plotting/index.html#_plotter.plot_text">plot_text() (in module _plotter)</a>
 </li>
@@ -590,7 +588,9 @@
 </li>
       <li><a href="xafs/preedge.html#pre_edge">pre_edge() (built-in function)</a>
 </li>
-      <li><a href="xafs/preedge.html#pre_edge_baseline">pre_edge_baseline() (built-in function)</a>
+      <li><a href="xafs/preedge.html#larch.xafs.pre_edge_baseline">pre_edge_baseline() (in module larch.xafs)</a>
+</li>
+      <li><a href="xafs/preedge.html#larch.xafs.prepeaks_setup">prepeaks_setup() (in module larch.xafs)</a>
 </li>
       <li><a href="data/index.html#_io.PV">PV() (in module _io)</a>
 </li>
@@ -634,7 +634,7 @@
 </li>
       <li><a href="devel/plugins.html#index-1">requirements.txt</a>
 </li>
-      <li><a href="fitting/parameters.html#_math.reset_fiteval">reset_fiteval() (in module _math)</a>
+      <li><a href="fitting/parameters.html#reset_fiteval">reset_fiteval() (built-in function)</a>
 </li>
       <li><a href="data/index.html#_io.restore">restore() (in module _io)</a>
 </li>
@@ -668,9 +668,9 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="xafs/feffpaths.html#_xafs.sigma2_debye">sigma2_debye() (in module _xafs)</a>
+      <li><a href="xafs/feffpaths.html#sigma2_debye">sigma2_debye() (built-in function)</a>
 </li>
-      <li><a href="xafs/feffpaths.html#_xafs.sigma2_eins">sigma2_eins() (in module _xafs)</a>
+      <li><a href="xafs/feffpaths.html#sigma2_eins">sigma2_eins() (built-in function)</a>
 </li>
       <li><a href="tutorial/builtins.html#sleep">sleep() (built-in function)</a>
 </li>
@@ -754,15 +754,15 @@
 </li>
       <li><a href="xafs/preedge.html#xas_deconvolve">xas_deconvolve() (built-in function)</a>
 </li>
-      <li><a href="xafs/xafsft.html#_xafs.xftf">xftf() (in module _xafs)</a>
+      <li><a href="xafs/xafsft.html#xftf">xftf() (built-in function)</a>
 </li>
-      <li><a href="xafs/xafsft.html#_xafs.xftf_fast">xftf_fast() (in module _xafs)</a>
+      <li><a href="xafs/xafsft.html#xftf_fast">xftf_fast() (built-in function)</a>
 </li>
-      <li><a href="xafs/xafsft.html#_xafs.xftr">xftr() (in module _xafs)</a>
+      <li><a href="xafs/xafsft.html#xftr">xftr() (built-in function)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="xafs/xafsft.html#_xafs.xftr_fast">xftr_fast() (in module _xafs)</a>
+      <li><a href="xafs/xafsft.html#xftr_fast">xftr_fast() (built-in function)</a>
 </li>
       <li><a href="xray/index.html#_xray.xray_delta_beta">xray_delta_beta() (in module _xray)</a>
 </li>
@@ -810,7 +810,7 @@
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright Matthew Newville, The University of Chicago, 2019.
+        &#169; Copyright Matthew Newville, The University of Chicago, 2020.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.3.1.
     </div>
   </body>
