update docs for 0.9.49

--- a/getting_started.html
+++ b/getting_started.html
@@ -2,10 +2,11 @@
 
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <meta charset="utf-8" />
-    <title>2. Getting Started with Larch &#8212; xraylarch 0.9.47 documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>2. Getting Started with Larch &#8212; xraylarch 0.9.49 documentation</title>
     <link rel="stylesheet" href="_static/larchdoc.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
@@ -14,7 +15,7 @@
     <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
     <script src="_static/language_data.js"></script>
-    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
@@ -64,7 +65,8 @@
    <li><a href="xray/index.html">X-ray Databases</a>|</li>
    <li><a href="xrf/index.html">XRF Analysis</a>|</li>
    <li><a href="fitting/index.html">Curve Fitting</a>|</li>
- 
+
+        <li class="nav-item nav-item-this"><a href=""><span class="section-number">2. </span>Getting Started with Larch</a></li> 
       </ul>
     </div>
 
@@ -119,7 +121,7 @@ least aims to include) all the functionality needed for visualizing,
 processing, and analyzing X-ray Absorption and Flourescence spectroscopy
 data.  Most users will start Larch has a few GUI applications, especially
 <code class="docutils literal notranslate"><span class="pre">XAS</span> <span class="pre">Viewer</span></code>, <code class="docutils literal notranslate"><span class="pre">GSE</span> <span class="pre">XRM</span> <span class="pre">MapViewer</span></code>, and <code class="docutils literal notranslate"><span class="pre">XRF</span> <span class="pre">Display</span></code> for these.  In
-addition, Larch includes an embedded Python-like scripting language for
+addition, Larch includes an embedded Python-like macro language for
 interacting with data that can be used either from a basic command-line
 interface or as a callable service from a different programming language
 (so that Athena and Artemis can use Larch instead of the older Ifeffit
@@ -175,6 +177,7 @@ own scripts and building up more sophisticated programs.</p>
 </div>
 
 
+            <div class="clearer"></div>
           </div>
         </div>
       </div>
@@ -198,12 +201,13 @@ own scripts and building up more sophisticated programs.</p>
    <li><a href="xray/index.html">X-ray Databases</a>|</li>
    <li><a href="xrf/index.html">XRF Analysis</a>|</li>
    <li><a href="fitting/index.html">Curve Fitting</a>|</li>
- 
+
+        <li class="nav-item nav-item-this"><a href=""><span class="section-number">2. </span>Getting Started with Larch</a></li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2020.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.4.0.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.2.1.
     </div>
   </body>
 </html>
