update docs for 0.9.55 (wip)

--- a/genindex.html
+++ b/genindex.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; xraylarch 0.9.54 documentation</title>
+    <title>Index &#8212; xraylarch 0.9.55 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/larchdoc.css" />
     
@@ -170,7 +170,7 @@
         <li><a href="larchlang/builtins.html#abs">built-in function</a>
 </li>
       </ul></li>
-      <li><a href="data.html#io.add_group">add_group() (in module _io)</a>
+      <li><a href="data.html#io.AthenaProject.add_group">add_group() (_io.AthenaProject method)</a>
 </li>
       <li>
     add_plugin()
@@ -205,7 +205,7 @@
 </li>
       <li><a href="larchlang/arrays.html#index-2">array methods</a>
 </li>
-      <li><a href="data.html#io.as_group">as_group() (in module _io)</a>
+      <li><a href="data.html#io.AthenaProject.as_group">as_group() (_io.AthenaProject method)</a>
 </li>
       <li><a href="data.html#io.athena_to_hdf5">athena_to_hdf5() (in module _io)</a>
 </li>
@@ -1473,7 +1473,7 @@
         <li><a href="larchlang/builtins.html#raw_input">built-in function</a>
 </li>
       </ul></li>
-      <li><a href="data.html#io.read">read() (in module _io)</a>
+      <li><a href="data.html#io.AthenaProject.read">read() (_io.AthenaProject method)</a>
 </li>
       <li><a href="data.html#io.read_ascii">read_ascii() (in module _io)</a>
 </li>
@@ -1557,8 +1557,12 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="data.html#id0">save() (in module _io)</a>, <a href="data.html#io.save">[1]</a>
+      <li><a href="data.html#io.AthenaProject.save">save() (_io.AthenaProject method)</a>
+
+      <ul>
+        <li><a href="data.html#io.save">(in module _io)</a>
 </li>
+      </ul></li>
       <li><a href="plotting.html#plotter.save_image">save_image() (in module _plotter)</a>
 </li>
       <li><a href="plotting.html#plotter.save_plot">save_plot() (in module _plotter)</a>
