--- a/genindex.html
+++ b/genindex.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; xraylarch 0.9.58 documentation</title>
+    <title>Index &#8212; xraylarch 0.9.59 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/larchdoc.css" />
     
@@ -1479,6 +1479,8 @@
 </li>
       <li><a href="data.html#io.read_athena">read_athena() (in module _io)</a>
 </li>
+      <li><a href="data.html#io.read_fdmnes">read_fdmnes() (in module _io)</a>
+</li>
       <li>
     read_gsemca()
 
@@ -1496,10 +1498,10 @@
 </li>
       <li><a href="data.html#io.read_tiff">read_tiff() (in module _io)</a>
 </li>
-      <li><a href="data.html#io.read_xdi">read_xdi() (in module _io)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="data.html#io.read_xdi">read_xdi() (in module _io)</a>
+</li>
       <li>
     reduce()
 
@@ -1855,7 +1857,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright Matthew Newville, The University of Chicago, 2020.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.3.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
     </div>
   </body>
 </html>
